force-app/main/default/objects/Talk__c/Talk__c.object-meta.xml
<CustomObject>
    <label>Talk</label>
    <nameField>
        <displayFormat>T-{0000}</displayFormat>
        <label>Talk Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Talks</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>