force-app/main/default/objects/Talk__c/fields/Abstract__c.field-meta.xml
<CustomField>
    <fullName>Abstract__c</fullName>
    <label>Abstract</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>