force-app/main/default/objects/Talk__c/fields/Conference__c.field-meta.xml
<CustomField>
    <fullName>Conference__c</fullName>
    <label>Conference</label>
    <referenceTo>Conference__c</referenceTo>
    <relationshipLabel>Talks</relationshipLabel>
    <relationshipName>Talks</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>