force-app/main/default/objects/Talk__c/fields/Speakers__c.field-meta.xml
<CustomField>
    <fullName>Speakers__c</fullName>
    <label>Speakers</label>
    <length>255</length>
    <type>Text</type>
</CustomField>