force-app/main/default/objects/Talk__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Title__c</columns>
    <columns>Abstract__c</columns>
    <columns>Speakers__c</columns>
    <columns>Duration__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>